--- a/package.json
+++ b/package.json
@@ -84,8 +84,7 @@
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
-    "sass": "^1.32.12",
-    "zombie": "6.1.4"
+    "sass": "^1.32.12"
   },
   "// (prettier)": "configuration version 2020-06-15 - might also reside in .prettierrc.json",
   "prettier": {
