--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
     "reactstrap": "^8.10.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-transform-runtime": "^7.14.3",
-    "@babel/preset-env": "7.14.4",
-    "@babel/preset-react": "^7.13.13",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
     "@kth/eslint-config-kth": "^2.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
@@ -105,11 +105,5 @@
     "plugins": [
       "@babel/plugin-transform-runtime"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run test",
-      "pre-commit": "pretty-quick --staged"
-    }
   }
 }
