--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "prettier:all": "prettier --write \"**/*.js\" \"**/*.jsx\" \"**/*.scss\"",
     "test": "NODE_ENV=test jest",
+    "test-win": "cross-env NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:notify": "NODE_ENV=test jest --watch --notify",
     "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
@@ -36,6 +37,7 @@
     "chalk": "^4.1.2",
     "component-registry": "^2.0.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
