--- a/.github/workflows/evolene-ci.yml
+++ b/.github/workflows/evolene-ci.yml
@@ -31,7 +31,7 @@ jobs:
           BUILD_INFORMATION_OUTPUT_FILE: '/config/version.js' # Create a file with the build information
           # BRANCHES_SAVE_STARTING_WITH: "origin/"          # Builds non main or master branches.
           # BRANCHES_TAG_AS_MAIN: "True"                    # Do not add branch names to build artifacts
-          SLACK_CHANNELS: '#team-kursinfo-build' # List of Slack channels for user information
+          SLACK_CHANNELS: '#team-studadm-build' # List of Slack channels for user information
           # SKIP_DRY_RUN: True                              # Skip "dry run" step
 
         run: |
