--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lint": "eslint \"public/**/*.{js,jsx}\" --quiet",
     "prepare": "husky install",
     "start": "bash -c 'NODE_ENV=production node app.js'",
+    "start-inspect": "bash -c 'NODE_ENV=production node --inspect app.js'",
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'"
   },
   "dependencies": {
