--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,37 @@
+.DS_Store
+
+.git/
+
+# IDEA specific
+.idea
+*.iml
+
+# VS Code specific
+.vscode
+jsconfig.json
+typings/*
+typings.json
+# Logs
+logs/*
+*.log
+
+# Dependency directory for NPM
+node_modules
+
+# Built at startup
+bundles
+public/js/app/config*.js
+dist
+.cache
+
+# Docker
+*.env
+
 # Prevent SyntaxError: Handlebars partials are not supported
 server/views/layouts/
+
+# Local testing tools (Alexander):
+docker-local.*
+
+# Run prettier
+*.handlebars
