--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "uri": "https://github.com/KTH/node-web"
   },
   "engines": {
-    "node": "14"
+    "node": "16"
   },
   "scripts": {
     "build": "bash ./build.sh prod",
@@ -31,18 +31,17 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.17.2",
-    "@kth/api-call": "^4.0.34",
-    "@kth/kth-node-web-common": "^7.0.8",
+    "@kth/api-call": "^4.0.35",
+    "@kth/kth-node-web-common": "^7.0.9",
     "@kth/kth-reactstrap": "^0.4.47",
-    "@kth/log": "^3.1.11",
+    "@kth/log": "^4.0.1",
     "@kth/monitor": "^3.0.22",
     "@kth/server": "^4.0.1",
     "@kth/session": "^3.0.2",
     "applicationinsights": "^2.2.1",
     "axios": "^0.24.0",
-    "body-parser": "^1.19.1",
-    "chalk": "^4.1.2",
-    "component-registry": "^2.0.0",
+    "body-parser": "^1.19.2",
+    "chalk": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
@@ -52,11 +51,11 @@
     "kth-node-configuration": "^2.0.10",
     "kth-node-express-routing": "^2.0.12",
     "kth-node-i18n": "^1.0.12",
-    "kth-node-redis": "^3.1.36",
+    "kth-node-redis": "^3.1.37",
     "kth-style": "7.0.12",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
-    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "prop-types": "^15.8.1",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
@@ -66,17 +65,16 @@
     "reactstrap": "^8.10.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.0",
-    "@babel/core": "^7.17.2",
+    "@babel/cli": "^7.17.3",
+    "@babel/core": "^7.17.4",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@kth/eslint-config-kth": "^2.0.2",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.0",
     "babel-loader": "^8.2.3",
-    "babel-eslint": "^10.1.0",
     "concurrently": "^7.0.0",
     "css-loader": "^6.6.0",
     "eslint": "^7.32.0",
@@ -88,7 +86,6 @@
     "mini-css-extract-plugin": "^2.5.3",
     "nodemon": "^2.0.15",
     "null-loader": "^4.0.1",
-    "parcel-bundler": "^1.12.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "sass": "^1.49.7",
