--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "bash -c 'NODE_ENV=production node app.js'",
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
     "start-dev:docker": "npm run build-dev-docker && bash ./build-and-run-docker-image.sh dev",
-    "start-in-docker": "bash -c 'NODE_ENV=development node --inspect=0.0.0.0 app.js'",
+    "start-in-dev-docker": "bash -c 'NODE_ENV=development node --inspect=0.0.0.0 app.js'",
     "start-test:load": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run start-dev:docker\" \"npm run test:load\"'",
     "test": "cross-env NODE_ENV=test jest",
     "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
